<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/questionpage">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"

        >

        <TextView
            android:id="@+id/textQuestionNo"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="82dp"
            android:text="@string/question" />

        <TextView
            android:id="@+id/textQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="100dp"
            android:text="@string/Question"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/textQuestion"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginBottom="538dp"
            android:text="@string/score_0"

            />


        <TextView
            android:id="@+id/textTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="82dp"
            android:layout_marginRight="48dp"
            android:text="@string/_00_20" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="328dp"
            android:layout_height="499dp"
            android:layout_centerInParent="true">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="95dp"

                android:layout_marginLeft="95dp"
                android:layout_marginTop="195dp"
                android:text="@string/option1"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="95dp"
                android:layout_marginLeft="95dp"
                android:layout_marginTop="75dp"
                android:text="@string/option2"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="95dp"
                android:layout_marginLeft="95dp"
                android:layout_marginTop="75dp"
                android:text="@string/option3"
                android:textSize="30sp"
                android:textStyle="bold" />
        </RadioGroup>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="31dp"
            android:text="@string/next"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/back"
            android:onClick="homepage"
            tools:ignore="UsingOnClickInXml"/>


    </RelativeLayout>


</LinearLayout>
