<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepage"
    android:background="@drawable/mainscreen"
    >


    <Button
        android:id="@+id/start"
        android:layout_width="167dp"
        android:layout_height="52dp"
        android:layout_marginStart="157dp"
        android:layout_marginLeft="157dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="156dp"
        android:layout_marginRight="156dp"
        android:gravity="center"
        android:onClick="activity2"
        android:text="@string/Start"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/CreateQuiz"
        android:layout_width="167dp"
        android:layout_height="52dp"
        android:layout_marginStart="157dp"
        android:layout_marginLeft="157dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="156dp"
        android:layout_marginRight="156dp"
        android:layout_marginBottom="340dp"
        android:text="@string/CreateQuiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start"
        app:layout_constraintVertical_bias="0.551" />

    <Button
        android:id="@+id/Exit"
        android:layout_width="202dp"
        android:layout_height="63dp"
        android:layout_marginStart="139dp"
        android:layout_marginLeft="139dp"
        android:layout_marginEnd="139dp"
        android:layout_marginRight="139dp"
        android:layout_marginBottom="80dp"
        android:text="@string/Exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="exit"
        tools:ignore="UsingOnClickInXml"/>

    <Button
        android:id="@+id/Kamar"
        android:layout_width="202dp"
        android:layout_height="63dp"

        android:layout_marginBottom="612dp"
        android:onClick="Kamar"
        android:text="@string/Kamar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/Nzqa"
        android:layout_width="202dp"
        android:layout_height="63dp"
        android:layout_marginBottom="612dp"
        android:onClick="Nzqa"
        android:text="@string/nzqa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/signoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="192dp"
        android:onClick="loginpage"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />


</androidx.constraintlayout.widget.ConstraintLayout>
